--- a/TnbParallel/TnbParallel.vcxproj
+++ b/TnbParallel/TnbParallel.vcxproj
@@ -70,10 +70,10 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>$(MSMPI_INC);$(IncludePath)</IncludePath>
+    <IncludePath>$(MSMPI_INC);$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>$(MSMPI_INC);$(IncludePath)</IncludePath>
+    <IncludePath>$(MSMPI_INC);$(SolutionDir)Commons\metis\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
