--- a/TnbLagrangian/TnbLagrangian.vcxproj.filters
+++ b/TnbLagrangian/TnbLagrangian.vcxproj.filters
@@ -2454,9 +2454,6 @@
     <ClInclude Include="TnbLib\lagrangian\intermediate\submodels\Reacting\PhaseChangeModel\NoPhaseChange\NoPhaseChangeTemplate.hxx">
       <Filter>TnbLib\lagrangian\intermediate\submodels\Reacting\PhaseChangeModel\NoPhaseChange</Filter>
     </ClInclude>
-    <ClInclude Include="TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification\solidification.hxx">
-      <Filter>TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification</Filter>
-    </ClInclude>
     <ClInclude Include="TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\standardPhaseChange\standardPhaseChange.hxx">
       <Filter>TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\standardPhaseChange</Filter>
     </ClInclude>
@@ -3135,6 +3132,9 @@
     <ClInclude Include="TnbLib\regionModels\surfaceFilmModels\submodels\filmSubModelBase_Imp.hxx">
       <Filter>TnbLib\regionModels\surfaceFilmModels\submodels</Filter>
     </ClInclude>
+    <ClInclude Include="TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification\solidificationPhaseChange.hxx">
+      <Filter>TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TnbLib\lagrangian\basic\InteractionLists\referredWallFace\referredWallFace.cxx">
@@ -3659,9 +3659,6 @@
     <ClCompile Include="TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\noPhaseChange\noPhaseChange.cxx">
       <Filter>TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\noPhaseChange</Filter>
     </ClCompile>
-    <ClCompile Include="TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification\solidification.cxx">
-      <Filter>TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification</Filter>
-    </ClCompile>
     <ClCompile Include="TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\standardPhaseChange\standardPhaseChange.cxx">
       <Filter>TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\standardPhaseChange</Filter>
     </ClCompile>
@@ -3754,6 +3751,9 @@
     </ClCompile>
     <ClCompile Include="TnbLib\lagrangian\turbulence\parcels\derived\basicThermoParcel\makeTurbulenceBasicThermoParcelSubmodels.cxx">
       <Filter>TnbLib\lagrangian\turbulence\parcels\derived\basicThermoParcel</Filter>
+    </ClCompile>
+    <ClCompile Include="TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification\solidificationPhaseChange.cxx">
+      <Filter>TnbLib\regionModels\surfaceFilmModels\submodels\thermo\phaseChangeModel\solidification</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
