--- a/TnbThermoPhysicalModels/TnbThermoPhysicalModels.vcxproj
+++ b/TnbThermoPhysicalModels/TnbThermoPhysicalModels.vcxproj
@@ -72,6 +72,7 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ExecutablePath>$(SolutionDir)Commons\win_flex_bison;$(ExecutablePath)</ExecutablePath>
     <IncludePath>$(SolutionDir)Commons\win_flex_bison;$(IncludePath)</IncludePath>
+    <TargetName>$(ProjectName)d</TargetName>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ExecutablePath>$(SolutionDir)Commons\win_flex_bison;$(ExecutablePath)</ExecutablePath>
